feat: css adjusts

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>SmartAlert</title>
@@ -9,9 +10,13 @@
   <link rel="icon" type="image/*" href="./assets/img/logo.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  
+
 </head>
-<body>
-  <app-root></app-root>
+
+<body style="background-image: url('./assets/img/2160x3840.jpg'); background-size: cover;">
+  <div style="width: 100%; height: auto; background: rgb(36,41,57); background: linear-gradient(13deg, rgba(36,41,57,0.7287289915966386) 0%, rgba(61,68,101,0.7259278711484594) 100%);">
+    <app-root></app-root>
+  </div>
 </body>
+
 </html>
